--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -38,17 +38,31 @@
     background: url("images/background.jpg") !important;
     background-repeat: no-repeat;
     background-size: 100% 100%;
-
+    //opacity: 0.5;
   }
 
   .v-label-header {
-    color: #867A7A;
+    color: rgba(20, 20, 104, 0.78);
     font-size: 24pt;
     padding: 5px;
   }
 
   .v-label-big {
     font-size: 30pt;
+  }
+
+  .v-label-error {
+    color: #b13028;
+  }
+
+  .v-panel-translucent {
+    background: rgba(202, 233, 239, 0.41);
+    color: #474747;
+    border-radius: 4px;
+    border: 1px solid #d5d5d5;
+    -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.05);
+    overflow: visible !important;
   }
 
 }
