--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -62,15 +62,15 @@
     //box-sizing: border-box;
     //z-index: 5;
     border: 1px solid #d4d4d4;
-    -webkit-user-select: text;
-    -moz-user-select: text;
-    -ms-user-select: text;
-    user-select: text;
+    //-webkit-user-select: text;
+    //-moz-user-select: text;
+    //-ms-user-select: text;
+    //user-select: text;
     position: relative;
     background: #fafafa;
     color: #464646;
     overflow: hidden;
-    font-family: ThemeIcons;
+    //font-family: ThemeIcons;
     font: inherit;
   }
   //.v-grid-16 > table {
